[package]
name = "restate-worker"
edition = "2024"
version = "0.1.0"
description = "Cloudflare Worker handler for Restate"
license = "MIT"
repository = "https://github.com/sagikazarmark/restate-worker"
homepage = "https://github.com/sagikazarmark/restate-worker"

[dependencies]
http = "1.4"
http-body-util = "0.1"
restate-sdk = { version = "0.9", default-features = false, features = ["http-body-util"] }
worker = { version = "0.7", features = ["http"] }

[package.metadata.release]
sign-commit = true
sign-tag = true
tag-message = "Release {{version}}"
tag-prefix = ""
